k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: revueon-svc
  namespace: revueon-ns
spec:
  selector:
    app: revueon
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
